kubernetes/applications/plex/plex-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-media-server
  namespace: media
  labels:
    app: plex-media-server
    app.kubernetes.io/name: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex-media-server
  template:
    metadata:
      labels:
        app: plex-media-server
    spec:
      hostNetwork: false
      dnsPolicy: ClusterFirst
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      hostAliases:
        - ip: 172.64.151.205
          hostnames:
            - servers.plex.tv
            - meta.plex.tv
            - metadata.provider.plex.tv
            - vod.provider.plex.tv
            - provider-static.plex.tv
            - scrobbles.plex.tv
        - ip: 54.156.171.78
          hostnames:
            - v4.plex.tv
        - ip: 66.228.61.220
          hostnames:
            - pubsub.plex.tv
      containers:
        - name: plex-core-engine
          image: lscr.io/linuxserver/plex:latest
          ports:
            - containerPort: 32400
              name: pms-http
              protocol: TCP
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1500m"
              memory: "1536Mi"
          volumeMounts:
            - name: plex-media-mount
              mountPath: /media
              readOnly: true
            - name: plex-persistent-config
              mountPath: /config
            - name: plex-transcode-tmp
              mountPath: /transcode
      volumes:
        - name: plex-media-mount
          persistentVolumeClaim:
            claimName: plex-media-pvc
        - name: plex-persistent-config
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: plex-transcode-tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: plex-service
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: plex-media-server
  ports:
    - port: 32400
      targetPort: 32400
      protocol: TCP
      name: web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Plex"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "plex"
    gethomepage.dev/href: "https://plex.${DOMAIN_NAME}/"
    gethomepage.dev/pod-selector: "app=plex-media-server"
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  ingressClassName: traefik
  rules:
    - host: plex.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex-service
                port:
                  number: 32400
